--- a/ejer-conversacion/index.html
+++ b/ejer-conversacion/index.html
@@ -7,9 +7,8 @@
         <title>Leer fichero XML y TXT</title>
     </head>
     <body>
-		<div>Cargar fichero XML</div>
 		<div id="ficheroXML"></div>
-        <script src=conversacion.xml></script>
+        <script src="ajax.js"></script>
         <script src="leerFicheroXML.js"></script>
 	</body>
 </html>
