--- a/Examen-BorjaCastelao/examen.html
+++ b/Examen-BorjaCastelao/examen.html
@@ -7,7 +7,7 @@
         <title>Examen</title>
     </head>
     <body>
-		<div id="cinexml">Hacer click para ver cartelera</div>
+		<div id="cine">Hacer click para ver cartelera</div>
         <script src="cine.js"></script>
 	</body>
 </html>
