--- a/Examen-BorjaCastelao/examen.html
+++ b/Examen-BorjaCastelao/examen.html
@@ -8,6 +8,7 @@
     </head>
     <body>
 		<div id="cine">Hacer click para ver cartelera</div>
-        <script src="cine.js"></script>
+        	   <script src="ajax.js"></script>
+	       	   <script src="cine.js"></script>
 	</body>
 </html>
