--- a/ejer-conversacion/index.html
+++ b/ejer-conversacion/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-	<link href="index.css" type="text/css" rel="stylesheet" media="all" />   
+	<link href="examen.css" type="text/css" rel="stylesheet" media="all" />   
 
-        <title>Leer fichero XML y TXT</title>
+        <title>Examen</title>
     </head>
     <body>
-		<div id="ficheroXML"></div>
+		<div id="cine">Hacer click para ver cartelera</div>
         <script src="ajax.js"></script>
         <script src="leerFicheroXML.js"></script>
 	</body>
