--- a/ejer-conversacion/index.html
+++ b/ejer-conversacion/index.html
@@ -7,7 +7,7 @@
         <title>Examen</title>
     </head>
     <body>
-		<div id="cine">Hacer click para ver cartelera</div>
+		<div id="FicheroXML">Hacer click para ver cartelera</div>
         <script src="ajax.js"></script>
         <script src="leerFicheroXML.js"></script>
 	</body>
