--- a/Examen-BorjaCastelao/examen.html
+++ b/Examen-BorjaCastelao/examen.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-	<link href="examen.css" type="text/css" rel="stylesheet" media="all" />   
+	<link href="exa.css" type="text/css" rel="stylesheet" media="all" />   
 
         <title>Examen</title>
     </head>
