--- a/ejer-conversacion/index.html
+++ b/ejer-conversacion/index.html
@@ -1,13 +1,14 @@
+</html>
 <!DOCTYPE>
 <html>
     <head>
         <meta charset="UTF-8"/>
-	<link href="examen.css" type="text/css" rel="stylesheet" media="all" />   
+	<link href="index.css" type="text/css" rel="stylesheet" media="all" />   
 
-        <title>Examen</title>
+        <title>Ejer Conversacion</title>
     </head>
     <body>
-		<div id="FicheroXML">Hacer click para ver cartelera</div>
+		<div id="ficheroXML"></div>
         <script src="ajax.js"></script>
         <script src="leerFicheroXML.js"></script>
 	</body>
